# FastApi_Nail_Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  create_admin.py  docker-compose.yml  dockerfile  logging_config.py  main.py  pyproject.toml  pytest.ini  redis_client.py  requirements.txt  requirements_dev.txt
auth/: __init__.py  cookies.py  dependencies.py  routes.py  security.py  utils.py
core/: config.py
db/: __init__.py  database.py  models.py
migrations/: env.py
migrations/versions/: a20d5e23f0eb_merge_heads.py  c08adcd3c825_initial_schema.py  dbaab40ed659_init.py  ea3777bbdea0_init.py
routers/: __init__.py  frontend.py  lessons.py  notes.py  user_profile.py
routers/admin/: __init__.py  course_admin.py  file_utils.py  lesson_admin.py
schemas/: __init__.py  course.py  lesson.py  note.py  user.py  user_profile.py
services/: __init__.py  lesson_service.py
static/css/: base.css  index.css
templates/: assignments.html  base.html  course_detail.html  courses.html  dashboard.html  index.html  login.html  profile.html  register.html
templates/admin/: course_edit.html  course_form.html  course_list.html  courses_list.html  lesson_form.html  lessons_list.html
templates/lesson/: lesson.html  lesson_detail.html
tests/: __init__.py  conftest.py  test_auth.py  test_login.py  test_logout.py  test_main.py
