[tool.poetry]
name = "nailis-hub"
version = "0.1.0"
description = "Онлайн-платформа по обучению маникюру"
authors = ["Asker Dyshekov <you@example.com>"]
packages = [
    { include = "auth" },
    { include = "core" },
    { include = "db" },
    { include = "routers" },
    { include = "schemas" },
    { include = "services" },
]

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "24.1.0"
aioredis = "1.3.1"
aiohttp = "3.12.14"
aiosignal = "1.4.0"
alembic = "1.16.4"
annotated-types = "0.7.0"
asgiref = "3.9.1"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
attrs = "25.3.0"
certifi = "2025.7.14"
cffi = "1.17.1"
charset-normalizer = "3.4.2"
click = "8.2.1"
cryptography = "45.0.5"
dnspython = "2.7.0"
ecdsa = "0.19.1"
email-validator = "2.2.0"
fastapi = "0.116.1"
fastapi-cache = "0.1.0"
greenlet = "3.2.3"
gunicorn = "23.0.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
importlib-metadata = "8.7.0"
jinja2 = "3.1.6"
loguru = "0.7.3"
mako = "1.3.10"
markdown = "3.8.2"
markupsafe = "3.0.2"
passlib = "1.7.4"
psycopg2-binary = "2.9.10"
pycparser = "2.22"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
pydantic-core = "2.33.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.1"
python-jose = "3.5.0"
python-multipart = "0.0.20"
pyyaml = "6.0.2"
redis = "6.2.0"
requests = "2.32.4"
sqlalchemy = "2.0.42"
starlette = "0.47.2"
typing-extensions = "4.14.1"
uvicorn = "0.35.0"


[tool.poetry.group.dev.dependencies]
aiofiles = "24.1.0"
aioredis = "1.3.1"
aiohttp = "3.12.14"
aiosignal = "1.4.0"
aiosqlite = "0.21.0"
alembic = "1.16.4"
annotated-types = "0.7.0"
anyio = "4.9.0"
asgiref = "3.9.1"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
attrs = "25.3.0"
certifi = "2025.7.14"
cffi = "1.17.1"
charset-normalizer = "3.4.2"
click = "8.2.1"
cryptography = "45.0.5"
dnspython = "2.7.0"
ecdsa = "0.19.1"
email-validator = "2.2.0"
fastapi = "0.116.1"
fastapi-cache = "0.1.0"
greenlet = "3.2.3"
gunicorn = "23.0.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
importlib-metadata = "8.7.0"
jinja2 = "3.1.6"
loguru = "0.7.3"
mako = "1.3.10"
markdown = "3.8.2"
markupsafe = "3.0.2"
passlib = "1.7.4"
psycopg2-binary = "2.9.10"
pycparser = "2.22"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
pydantic-core = "2.33.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.1"
python-jose = "3.5.0"
python-multipart = "0.0.20"
pytest = "8.4.1"
pytest-asyncio = "1.1.0"
pyyaml = "6.0.2"
redis = "6.2.0"
requests = "2.32.4"
sqlalchemy = "2.0.42"
starlette = "0.47.2"
typing-extensions = "4.14.1"
uvicorn = "0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


